src/test/deca/context/invalid/decaObjet/method/10redefinitionWrongReturnType.deca
// Description:
// Test de rédéfinition d'une méthode de superclasse avec un type de retour qui n'est pas un sous-type de la méthode de la superclasse.
//
// Resultats:
//  10redefinitionWrongReturnType.deca:17:4:
//
// Historique:
//    crée le 16/06/2022

class A {
    int m() {
        return 0;
    }
}

class B extends A {
    float m() {
        return 0;
    }
}